[gd_scene load_steps=15 format=3 uid="uid://cptts8oobi5tx"]

[ext_resource type="Texture2D" uid="uid://bos7rridjkps1" path="res://Assets/level/checkboard.png" id="1_vdcyi"]
[ext_resource type="Script" uid="uid://biculg45p8gkf" path="res://Scripts/game.gd" id="1_wspvq"]
[ext_resource type="PackedScene" uid="uid://duvamawbugyck" path="res://Scenes/Character/Spawner/mob_spawner_3d.tscn" id="2_wspvq"]
[ext_resource type="PackedScene" uid="uid://dess7tva0hmaa" path="res://Scenes/player.tscn" id="4_8l27e"]
[ext_resource type="AudioStream" uid="uid://slrssepful0f" path="res://Assets/Music/Wav/Ambient 10.wav" id="5_l4jf6"]
[ext_resource type="Script" uid="uid://5xd0ag7m42q5" path="res://Scripts/multiplayer_spawner.gd" id="6_l4jf6"]
[ext_resource type="Script" uid="uid://b0rxyp4tnypng" path="res://Character/Scene/Lost_panel.gd" id="7_d3sah"]

[sub_resource type="Environment" id="Environment_jas5e"]
background_mode = 1
background_color = Color(0, 0.807843, 1, 1)
ambient_light_source = 2
ambient_light_color = Color(0.815625, 0.702063, 0.54125, 1)
ambient_light_sky_contribution = 0.31
tonemap_mode = 2
tonemap_exposure = 1.05
tonemap_white = 0.95
ssao_intensity = 1.0
glow_normalized = true
glow_intensity = 0.2
fog_enabled = true
fog_light_color = Color(0, 0.478431, 0.764706, 1)
fog_density = 0.002
fog_height = 0.52
fog_height_density = 0.1319
volumetric_fog_density = 0.1525
volumetric_fog_albedo = Color(0.203922, 0.203922, 1, 1)
volumetric_fog_emission = Color(0.0431373, 0.0431373, 0.0431373, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d3sah"]
font_size = 56

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8l27e"]
albedo_color = Color(1, 0.717647, 0.188235, 1)
albedo_texture = ExtResource("1_vdcyi")
uv1_triplanar = true
uv1_triplanar_sharpness = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l4jf6"]
albedo_color = Color(0.286275, 0.682353, 0.427451, 1)
albedo_texture = ExtResource("1_vdcyi")
uv1_triplanar = true
uv1_triplanar_sharpness = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d3sah"]
albedo_color = Color(0.286275, 0.682353, 0.427451, 1)
albedo_texture = ExtResource("1_vdcyi")
uv1_triplanar = true
uv1_triplanar_sharpness = 4.0

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_vdcyi"]

[sub_resource type="LabelSettings" id="LabelSettings_uips6"]
font_size = 50

[node name="Main" type="Node3D"]
script = ExtResource("1_wspvq")

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jas5e")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.612373, 0.353553, 0, 0.5, 0.866026, -0.707107, -0.612373, 0.353553, 0, 10, 0)
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="Label" type="Label" parent="."]
offset_right = 531.0
offset_bottom = 108.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_d3sah")
metadata/_edit_use_anchors_ = true

[node name="Bridge2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.5)
use_collision = true
size = Vector3(4, 1, 3)
material = SubResource("StandardMaterial3D_8l27e")

[node name="Bridge5" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14.5)
use_collision = true
size = Vector3(4, 1, 3)
material = SubResource("StandardMaterial3D_8l27e")

[node name="Bridge6" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 18.5)
use_collision = true
size = Vector3(4, 1, 3)
material = SubResource("StandardMaterial3D_8l27e")

[node name="Bridge3" type="CSGBox3D" parent="."]
transform = Transform3D(-4.3711385e-08, 0, 0.99999994, 0, 1, 0, -0.99999994, 0, -4.3711385e-08, -10, 0, -0.482)
use_collision = true
size = Vector3(4, 1, 3)
material = SubResource("StandardMaterial3D_8l27e")

[node name="Bridge7" type="CSGBox3D" parent="."]
transform = Transform3D(-4.3711385e-08, 0, 0.99999994, 0, 1, 0, -0.99999994, 0, -4.3711385e-08, -14.391, 0, -1.901)
use_collision = true
size = Vector3(4, 1, 3)
material = SubResource("StandardMaterial3D_8l27e")

[node name="Bridge8" type="CSGBox3D" parent="."]
transform = Transform3D(-4.3711385e-08, 0, 0.99999994, 0, 1, 0, -0.99999994, 0, -4.3711385e-08, -18.326, 0, -0.671)
use_collision = true
size = Vector3(4, 1, 3)
material = SubResource("StandardMaterial3D_8l27e")

[node name="Bridge9" type="CSGBox3D" parent="."]
transform = Transform3D(-4.3711385e-08, 0, 0.99999994, 0, 1, 0, -0.99999994, 0, -4.3711385e-08, -22.194, 0, 1.2438645)
use_collision = true
size = Vector3(4, 1, 3)
material = SubResource("StandardMaterial3D_8l27e")

[node name="Platform6" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.735365, 0)
use_collision = true
size = Vector3(17, 11, 15)
material = SubResource("StandardMaterial3D_l4jf6")

[node name="Platform8" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.845, -5.375, 17.5)
use_collision = true
size = Vector3(29.289215, 11, 15)
material = SubResource("StandardMaterial3D_l4jf6")

[node name="Platform9" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, -5.735, 0)
use_collision = true
size = Vector3(12, 12, 15)
material = SubResource("StandardMaterial3D_l4jf6")

[node name="Platform7" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.375, 28.409157)
use_collision = true
size = Vector3(25, 11, 15)
material = SubResource("StandardMaterial3D_d3sah")

[node name="MobSpawner3D" parent="." instance=ExtResource("2_wspvq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.528, 2, -6.069)

[node name="MobSpawner3D2" parent="." instance=ExtResource("2_wspvq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.824, 2, -6.069)

[node name="Killplane" type="Area3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -10.511871, -0.988914, 25.06652)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Killplane"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.2555447, 0)
shape = SubResource("WorldBoundaryShape3D_vdcyi")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_l4jf6")
volume_db = -5.0
autoplay = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dess7tva0hmaa")
spawn_path = NodePath("..")
spawn_limit = 5
script = ExtResource("6_l4jf6")
network_player = ExtResource("4_8l27e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="DeathPanel" type="Panel" parent="CanvasLayer"]
process_mode = 3
offset_right = 1918.0
offset_bottom = 1075.0
script = ExtResource("7_d3sah")

[node name="FinalScoreLabel" type="Label" parent="CanvasLayer/DeathPanel"]
layout_mode = 0
offset_left = 322.0
offset_top = 328.0
offset_right = 1645.0
offset_bottom = 440.0
text = "FINAL SCORE: "
label_settings = SubResource("LabelSettings_uips6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Button" parent="CanvasLayer/DeathPanel"]
layout_mode = 0
offset_left = 694.0
offset_top = 535.0
offset_right = 871.0
offset_bottom = 655.0
text = "RETRY"

[node name="Quit" type="Button" parent="CanvasLayer/DeathPanel"]
layout_mode = 0
offset_left = 1093.0
offset_top = 532.0
offset_right = 1270.0
offset_bottom = 652.0
text = "QUIT"

[connection signal="boss_mob_spawned" from="MobSpawner3D" to="." method="_on_boss_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="boss_mob_spawned" from="MobSpawner3D2" to="." method="_on_boss_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D2" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="body_entered" from="Killplane" to="." method="_on_killplane_body_entered"]
[connection signal="button_down" from="CanvasLayer/DeathPanel/Retry" to="CanvasLayer/DeathPanel" method="_on_retry_button_pressed"]
[connection signal="button_down" from="CanvasLayer/DeathPanel/Quit" to="CanvasLayer/DeathPanel" method="_on_quit_button_pressed"]
